--- a/CityBike.ipynb
+++ b/CityBike.ipynb
@@ -17,7 +17,7 @@
     "# Downloaded csv files saved outside respository due to size limits\n",
     "# Please view readme for file locations\n",
     "# Merging the files\n",
-    "joined_files = os.path.join(\"\", \"20220*.csv\")a\n",
+    "joined_files = os.path.join(\"\", \"20220*.csv\")\n",
     "  \n",
     "# A list of all joined files is returned\n",
     "joined_list = glob.glob(joined_files)\n",
@@ -37,10 +37,10 @@
     "df.dropna(how='any')\n",
     "df['started_at'] = pd.to_datetime(df['started_at'])\n",
     "df['ended_at'] = pd.to_datetime(df['ended_at'])\n",
-    "df['trip_duration'] = df['ended_at'] - df['started_at']\n",
+    "df['trip_duration'] = (df['ended_at'] - df['started_at']).dt.total_seconds()/60\n",
     "df['month'] = pd.to_datetime(df['started_at']).dt.to_period('M')\n",
     "df['day_of_week'] = df['started_at'].dt.day_name()\n",
-    "df = df.loc[df['trip_duration'] < '01:00:00', :]\n",
+    "df = df.loc[df['trip_duration'] < 61, :]\n",
     "df = df[df['rideable_type'] != 'docked_bike']\n",
     "df['start_lat'] = df['start_lat'].round(3)\n",
     "df['start_lng'] = df['start_lng'].round(3)\n",
@@ -56,13 +56,7 @@
    "outputs": [],
    "source": [
     "# Creating time bins for later grouping\n",
-    "bins = [pd.Timedelta(minutes = 0),\n",
-    "        pd.Timedelta(minutes = 10),\n",
-    "        pd.Timedelta(minutes = 20),\n",
-    "        pd.Timedelta(minutes = 30),\n",
-    "        pd.Timedelta(minutes = 40),\n",
-    "        pd.Timedelta(minutes = 50),\n",
-    "        pd.Timedelta(hours = 4)]\n",
+    "bins = [0,10,20,30,40,50,120]\n",
     "labels = ['0-10min', '11-20min', '21-30min', '31-40min', '41-50min', '51min+']\n",
     "df['time_bin'] = pd.cut(df['trip_duration'], bins, labels = labels)"
    ]
