cleaning up notebook and unused csv files

--- a/CityBike.ipynb
+++ b/CityBike.ipynb
@@ -94,13 +94,12 @@
     "# Station summary data set up\n",
     "# Grouping by month/name\n",
     "df_sstation = df.groupby([df2['month'], df2['start_station_name'].rename('station')])\n",
-    "df_estation = df.groupby([df2['month'], df2['end_station_name'].rename('station')])\n",
     "# Counting number of start and end stations\n",
     "sstation = df_sstation['start_station_name'].count().rename('scount')\n",
-    "estation = df_estation['end_station_name'].count().rename('ecount')\n",
+    "sstation_duration = df_sstation['trip_duration'].mean().rename('scount_duration')\n",
     "# Df for counts\n",
     "df_start = pd.DataFrame(sstation)\n",
-    "df_end = pd.DataFrame(estation)"
+    "df_sduration = pd.DataFrame(sstation_duration)"
    ]
   },
   {
@@ -111,12 +110,10 @@
    "outputs": [],
    "source": [
     "# Merging two df together\n",
-    "station_summary = pd.merge(df_start, df_end, how='outer', on=['month', 'station'])\n",
+    "station_summary = pd.merge(df_start, df_sduration, how='outer', on=['month', 'station'])\n",
     "# Creating the df and making na values 0\n",
     "df_station_summary = pd.DataFrame(station_summary)\n",
-    "df_station_summary = df_station_summary.fillna(0)\n",
-    "# Total counts combined end and start\n",
-    "df_station_summary['total_s_e_counts'] = df_station_summary['scount'] + df_station_summary['ecount']"
+    "df_station_summary = df_station_summary.fillna(0)"
    ]
   },
   {
@@ -162,11 +159,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lat/Lng table for ending location\n",
-    "df_elocation = df2.filter(['end_station_name','end_lat','end_lng'], axis = 1).copy()\n",
-    "df_elocation = df_elocation.sort_values('end_station_name')\n",
-    "df_elocation = df_elocation.dropna(how='any')\n",
-    "df_elocation_unique = df_elocation.drop_duplicates(subset = 'end_station_name', keep = 'first')"
+    "# Member/Casual summary\n",
+    "df_member = df2.groupby([df2['month'], df2['started_at'].dt.strftime('%m/%d/%Y').rename('Date'), df2['member_casual']])\n",
+    "member_total = df_member['start_station_name'].count()\n",
+    "member_duration = df_member['trip_duration'].mean().round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f7bc4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating df \n",
+    "member_table = pd.DataFrame({\n",
+    "    'member_total': member_total,\n",
+    "    'member_duration': member_duration\n",
+    "})"
    ]
   },
   {
@@ -177,7 +187,7 @@
    "outputs": [],
    "source": [
     "# Creating CSV for Tableau\n",
-    "df_elocation_unique.to_csv('Resources/elocation_table.csv')"
+    "member_table.to_csv('Resources/member_table.csv')"
    ]
   },
   {
@@ -187,10 +197,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Member/Casual preference on type of bike\n",
-    "df_type = df2.groupby([df2['member_casual']])\n",
-    "classic_total = df_type['rideable_type'].apply(lambda x: (x=='classic_bike').sum())\n",
-    "electric_total = df_type['rideable_type'].apply(lambda x: (x=='electric_bike').sum())"
+    "# Average duration and totals by bike type and member\n",
+    "df_type = df2.groupby([df2['month'], df2['rideable_type'], df2['member_casual']])\n",
+    "type_total = df_type['start_station_name'].count()\n",
+    "type_duration = df_type['trip_duration'].mean().round(2)"
    ]
   },
   {
@@ -201,9 +211,9 @@
    "outputs": [],
    "source": [
     "# Creating df \n",
-    "type_table = pd.DataFrame({\n",
-    "    'Classic': classic_total,\n",
-    "    'Electric': electric_total\n",
+    "type_table2 = pd.DataFrame({\n",
+    "    'type_total': type_total,\n",
+    "    'type_duration': type_duration    \n",
     "})"
    ]
   },
@@ -215,7 +225,7 @@
    "outputs": [],
    "source": [
     "# Creating CSV for Tableau\n",
-    "type_table.to_csv('Resources/type_table.csv')"
+    "type_table2.to_csv('Resources/type_duration.csv')"
    ]
   },
   {
@@ -225,62 +235,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Average duration by bike type\n",
-    "df_type_duration = df2.groupby([df2['rideable_type']])\n",
-    "type_duration = df_type_duration['trip_duration'].mean()"
+    "# Total counts by DOW and average trip times\n",
+    "df_dayofweek = df2.groupby([df2['month'], df2['start_station_name'], df2['started_at'].dt.hour.rename('hour'), df2['day_of_week']])\n",
+    "dow_total = df_dayofweek['day_of_week'].count().rename('counts')\n",
+    "dow_duration = df_dayofweek['trip_duration'].mean().round(2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ccd93583",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating CSV for Tableau\n",
-    "type_duration.to_csv('Resources/type_duration.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a5cda67",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total counts by station and hour to see busiest times by station in a given month\n",
-    "df_hour = df2.groupby([df2['month'], df2['started_at'].dt.hour.rename('hour')])\n",
-    "hour_total = df_hour['started_at'].count().rename('counts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe458d81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating CSV for Tableau\n",
-    "hour_total.to_csv('Resources/hour_total.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d11cbc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total counts by DOW and average trip times\n",
-    "df_dayofweek = df2.groupby([df2['month'], df2['started_at'].dt.hour.rename('hour'), df2['day_of_week']])\n",
-    "dow_total = df_dayofweek['day_of_week'].count().rename('counts')\n",
-    "dow_duration = df_dayofweek['trip_duration'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38183196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58a29e5",
+   "id": "1a5cda67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,30 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c02a13f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total counts by station and DOW\n",
-    "df_station_dayofweek = df2.groupby([df2['month'], df2['start_station_name'], df2['day_of_week']])\n",
-    "dow_station_total = df_station_dayofweek['day_of_week'].count().rename('counts')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea426bef",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating CSV for Tableau\n",
-    "dow_station_total.to_csv('Resources/dow_station_total.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d2e6c4a",
+   "id": "fe458d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,58 +281,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "172b350c",
+   "id": "7d11cbc1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating CSV for Tableau\n",
     "dow_bin_total.to_csv('Resources/dow_bin_total.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74c999ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating summary table for high level values\n",
-    "df_summary = df2.groupby([df2['month']])\n",
-    "ride_total = df_summary['ride_id'].count()\n",
-    "members_total = df_summary['member_casual'].apply(lambda x: (x=='member').sum())\n",
-    "casual_total = df_summary['member_casual'].apply(lambda x: (x=='casual').sum())\n",
-    "classic_total = df_summary['rideable_type'].apply(lambda x: (x=='classic_bike').sum())\n",
-    "electric_total = df_summary['rideable_type'].apply(lambda x: (x=='electric_bike').sum())\n",
-    "duration_avg = df_summary['trip_duration'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c479221",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating df\n",
-    "summary_table = pd.DataFrame({\n",
-    "    'total_rides': ride_total,\n",
-    "    'total_member': members_total,\n",
-    "    'total_casual': casual_total,\n",
-    "    'total_classic': classic_total,\n",
-    "    'total_electric': electric_total,\n",
-    "    'avg_duration': duration_avg\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc2763bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating CSV for Tableau\n",
-    "summary_table.to_csv('Resources/summary_table.csv')"
    ]
   },
   {
